# PartiNet

./: .gitignore  .gitmodules  404.html  Dockerfile  README.md  Singularity  detect.py  index.html  markdown-page.html  pyproject.toml  setup.py  sitemap.xml  test.py  train_step1.py  train_step2.py
.github/workflows/: docker.yml  singularity.yml
assets/css/: styles.a3f97d5e.css
assets/js/: 0058b4c6.e274bb4d.js  094338b8.173b63ad.js  094338b8.9cd75e63.js  094338b8.d648fb97.js  094338b8.f88f4dcc.js  0e384e19.2b70c457.js  0e384e19.63ab171f.js  0e384e19.83e18f7a.js  0e384e19.f709f516.js  16c4be42.1eb128d3.js  16c4be42.5f7d5842.js  16c4be42.79320fdf.js  16c4be42.f9718f9d.js  19004dc9.70ba6730.js  193d4893.a5c1d8cc.js  1df93b7f.0ac8b627.js  1df93b7f.be97378c.js  1f391b9e.0502f1df.js  1f391b9e.30aac79f.js  3523a679.4868dad6.js  3523a679.6cfd9c48.js  3523a679.744a122e.js  3523a679.9c580a87.js  38183771.45c6c2ec.js  393be207.775b7351.js  3b8c55ea.85338de0.js  3b8c55ea.94e5f0b7.js  3b8c55ea.a97cdd4e.js  3b8c55ea.f26a817d.js  603b4d8e.291e102b.js  603b4d8e.55d6cd93.js  603b4d8e.a718b29b.js  603b4d8e.f088de01.js  6c23f4bc.69746073.js  6c23f4bc.711b47b8.js  6c23f4bc.80d9faa7.js  6c23f4bc.aad4c004.js  6cab11a8.b79d3a53.js  6d03588e.fc70e332.js  d2a56432.0ba27c8e.js  (+19 more)
cfg/: dy-yolov7-d6-step1.yaml  dy-yolov7-d6-step2.yaml  dy-yolov7-e6e-step1.yaml
docs/: docusaurus.config.ts  getting-started.html  installation.html  intro.html  package-lock.json  package.json  partinet_docs.md  tsconfig.json
docs/category/: picking.html  training.html
docs/docs/: getting-started.md  installation.md  intro.md
docs/docs/stages/: _category_.json  denoise.md  detect.md  star.md
docs/docs/training/: _category_.json  split.md  train1.md  train2.md  training-output.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/stages/: denoise.html  detect.html  star.html
docs/training/: split.html  train1.html  train2.html  training-output.html
models/: common.py  yolo.py
partinet/: __init__.py  guided_denoiser.py  pooled_denoise_proc.py  star_file.py
partinet/DynamicDet/: README.md  detect.py  strip_optimizer.py  test.py  train_step2.py
partinet/DynamicDet/cfg/: dy-yolov10m-step1.yaml  dy-yolov7-e6-step1.yaml  dy-yolov7-e6-step2.yaml  dy-yolov7-e6e-step2.yaml
partinet/gui/: __init__.py  app.py
partinet/process_utils/: guided_denoiser.py  pooled_denoise_proc.py  split_train.py  star_file.py
scripts/: create-data-split.py  create-test-data.py  create-train-data.py  debugging.ipynb  denoise.sh  denoise_one.sh  detect.sh  download.sh  generate-star-file.py  generate-star-file.sh  get-bounding-box.py  noannot_images.txt  prepare-date-for-training.py  preprocess.py  preprocess.sh  preprocess_step1.sh  preprocess_step2.sh  test.sh  train_step1.sh  train_step2.sh  visualise_denoise_results.ipynb
scripts/meta/: annot_images.txt  datasets.txt  development_set.txt  fix_names_datasets.txt  test_set.txt
scripts/star_file_gen/: generate-star-file.py  generate-star-file.sh
tests/: test_guided_denoiser.py
utils/: autoanchor.py  datasets.py  general.py  loss.py  plots.py
(+7 files in other folders)
