[project]
name = "partinet"
dynamic = ["version"]
authors = [
  { name="Mihin Perera", email="perera.m@wehi.edu.au" },
  { name="Mansi Aggarwal", email="aggarwal.m@wehi.edu.au" },
  { name="Ojasvi Jain", email="jain.o@wehi.edu.au" },
  { name="Julie Iskander", email="iskander.j@wehi.edu.au" },
  { name="Edward Yang", email="yang.e@wehi.edu.au" },
  { name="Shabih Shakeel", email="shakeel.s@wehi.edu.au" },
]
maintainers = [
    { name = "Mihin Perera", email="perera.m@wehi.edu.au" },
    { name = "Julie Iskander", email="iskander.j@wehi.edu.au" },
    { name = "Edward Yang", email="yang.e@wehi.edu.au" }
]
description = "A CryoEM particle picker tool based on DynamicDet"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib >= 3.2.2",
  "numpy >= 1.18.5",
  "opencv-python >= 4.1.1",
  "Pillow >= 7.1.2",
  "PyYAML >= 5.3.1",
  "requests >= 2.23.0",
  "scipy >= 1.4.1",
  "torch >= 1.7.0, != 1.12.0",
  "torchvision >= 0.8.1, != 0.13.0",
  "tqdm >= 4.41.0",
  "protobuf < 4.21.3",
  "pandas >= 1.1.4",
  "seaborn >= 0.11.0",
  "click",
  "tensorboard"
]

[project.scripts]
partinet = "partinet:main"

[build-system]
requires = ["setuptools", "Click"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["partinet*"]

[tool.setuptools.package-data]
"*" = ["dy-*.yaml", "hyp.*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "partinet.__version__"}

[project.urls]
Homepage = "https://github.com/WEHI-ResearchComputing/PartiNet"
Issues = "https://github.com/WEHI-ResearchComputing/PartiNet/issues"
